--- a/patient-react-app/src/index.css
+++ b/patient-react-app/src/index.css
@@ -2,14 +2,20 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  color: white;
 }
 
 .container {
+  margin-top: 20px;
   max-width: 1000px;
   margin-left: auto;
   margin-right: auto;
   padding-left: 15px;
   padding-right: 15px;
+}
+
+.ant-layout-content {
+  background-color: #303a46;
 }
 
 @media (max-width: 768px) {
