--- a/patient-react-app/src/application/App.css
+++ b/patient-react-app/src/application/App.css
@@ -1,5 +1,10 @@
 
 .page-title {
   display: block;
-  font-size: 120%; 
+  font-size: 120%;
+  color: white; 
+}
+
+.app-container {
+  height: 640px;
 }
