--- a/patient-react-app/src/elemental/StartPage.css
+++ b/patient-react-app/src/elemental/StartPage.css
@@ -8,4 +8,9 @@ div.container4 h1 {
     top: 50%;
     left: 50%;
     margin-right: -50%;
-    transform: translate(-50%, -50%) }
+    transform: translate(-50%, -50%) 
+}
+
+div.container4 h1 a {
+    color: white;
+}
