Button was moved to get symmetry.

--- a/patient-react-app/src/user/profile/Profile.css
+++ b/patient-react-app/src/user/profile/Profile.css
@@ -10,7 +10,8 @@ div.profile-container h2, div, svg {
 }
 
 div.profile-container button {
-    margin: 40px;
+    
+    margin-left: 60%;
     
     background-color: transparent;
     color: white;
