passing current user from profile to datos tab

--- a/patient-react-app/src/user/profile/Profile.css
+++ b/patient-react-app/src/user/profile/Profile.css
@@ -9,7 +9,7 @@ div.profile-container h2, div, svg {
     
 }
 
-div.profile-container button {
+div.profile-container .menu-btn {
     
     margin-left: 60%;
     
