including basic data modal component in datos tab component, creating all props importing in datos tab for basic modal componen. Styling form in basic modal.

--- a/patient-react-app/src/user/profile/tabs/DatosTab.css
+++ b/patient-react-app/src/user/profile/tabs/DatosTab.css
@@ -25,3 +25,7 @@ button.small-btn {
 .modal-visible .ant-modal-content div{
     color:black;
 }
+
+.modal-visible .ant-modal-content input{
+    border-radius: 20px;
+}
