Styling to checkbox in personal data modal component.

--- a/src/user/profile/tabs/modals/PersonalDataModal.css
+++ b/src/user/profile/tabs/modals/PersonalDataModal.css
@@ -1,7 +1,14 @@
 .ant-checkbox-wrapper span {
     color: slategrey;
     margin: 0;
-    
+    padding: 0;
     font-size: 12px;
-    line-height: 1px;
+    line-height: 20px;
 }
+
+.ant-checkbox-wrapper span  .question-checkbox {
+    color: slategrey;
+    font-size: 10px;
+    display: block;
+}
+
