Menu modal created for show a menu when clicking in upper right corner in profile menu.

--- a/src/user/profile/tabs/DatosTab.css
+++ b/src/user/profile/tabs/DatosTab.css
@@ -30,3 +30,12 @@ button.small-btn {
 .modal-visible .ant-modal-content input{
     border-radius: 20px;
 }
+
+button.ant-btn.close-session-button {
+    align-content: center;
+    background-color: darkgray;
+}
+
+span.menu-tag {
+    color: cadetblue;
+}
