User can upload a custom avatar. Solving some leaks respecting constructors in estudios modal, datos tab and app component.

--- a/src/user/profile/tabs/DatosTab.css
+++ b/src/user/profile/tabs/DatosTab.css
@@ -39,3 +39,11 @@ button.ant-btn.close-session-button {
 span.menu-tag {
     color: cadetblue;
 }
+
+input.avatarInput {
+    margin-top: 6px;
+    border-radius: 20px;
+    background: transparent;
+    border: none;
+    color: transparent;
+}
